syntax = "proto3";

package catworks.luna.session;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service SessionService {
  rpc startSession(StartSessionRq) returns (SessionData);

  // Retrieves SessionData for the current session via token from the request header.
  rpc getCurrentSession(google.protobuf.Empty) returns (SessionData);

  rpc renameSession(RenameSessionRq) returns (google.protobuf.Empty);

  rpc listSessions(google.protobuf.Empty) returns (SessionList);

  rpc logout(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc getInfo(google.protobuf.Empty) returns (ServiceInfo);
}

enum DeviceType {
  MOBILE = 0;
  TV = 2;
}

message SessionList {
  repeated SessionReference sessions = 1;
}

message SessionReference {
  string sessionId = 1;

  string name = 2;

  DeviceType deviceType = 3;
}

message SessionData {
  string sessionId = 1;

  string name = 2;

  DeviceType deviceType = 3;

  string token = 4;

  optional google.protobuf.Timestamp expiresAt = 5;
}

message StartSessionRq {
  DeviceType deviceType = 1;

  string name = 2;

  optional string otp = 3;

  optional google.protobuf.Timestamp expiresAt = 4;
}

message RenameSessionRq {
  string name = 1;

  optional SessionReference session = 2;
}

message ServiceInfo {
  string name = 1;

  string version = 2;
}
